--- a/frontend/Put Ur Pages Here/home page/Library.html
+++ b/frontend/Put Ur Pages Here/home page/Library.html
@@ -138,7 +138,23 @@
  	<div class="writting data">
  	Categories
  </div> <br>
- 
+ <div class="secondlist">
+  <ul>
+    <a style="text-decoration: none;" href=""><li>Programming</li></a>
+    <a style="text-decoration: none;" href=""><li>Mathematics</li></a>
+    <a style="text-decoration: none;" href=""><li> Short Stories</li></a>
+    <a style="text-decoration: none;" href=""><li>Biography</li></a>
+    <a style="text-decoration: none;" href=""><li>Comics</li></a>
+    <a style="text-decoration: none;" href=""><li>Crime</li></a>
+    <a style="text-decoration: none;" href=""><li>Fantasy</li></a>
+    <a style="text-decoration: none;" href=""><li>Fitness/Health</li></a>
+    <a style="text-decoration: none;" href=""><li>Historical Fiction</li></a>
+    <a style="text-decoration: none;" href=""><li>Graphics</li></a>
+
+
+  </ul>
+ </div>
+
 
   </div>
 </div>
