--- a/frontend/Put Ur Pages Here/books page/BOOKS.html
+++ b/frontend/Put Ur Pages Here/books page/BOOKS.html
@@ -268,6 +268,59 @@
 
 
 
+<div class="writting data">
+  Short Story Books:
+</div> <br>
+<div class="card-group">
+  <div class="card data">
+    <img src="SS1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+   <a href="https://www.goodreads.com/book/show/15709924-jack-and-the-bean-stalk?ac=1&from_search=true&qid=IlCMLYikfE&rank=1" target="_blank"><br><br><br><br><h5 class="card-title"> <button type="button" class="btn btn-outline-info"> Book Link</button></h5></a>
+ 
+    </div> 
+  </div> &nbsp; &nbsp; &nbsp; &nbsp;
+  <div class="card data">
+    <img src="SS2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+     <a href="https://www.goodreads.com/book/show/33564385-aesop-s-fables-the-hare-and-the-tortoise?from_search=true&from_srp=true&qid=gj3KyxGwNU&rank=3" target="_blank"><br><br><br><br>
+     <h5 class="card-title"> <button type="button" class="btn btn-outline-info"> Book Link</button></h5></a>
+ 
+    </div>
+  </div>&nbsp; &nbsp; &nbsp; &nbsp;
+  <div class="card data">
+    <img src="SS3.jpg" class="card-img-top" alt="..."> 
+    <div class="card-body">
+     <a href="https://www.goodreads.com/book/show/26192916-hensel-and-gretel?ac=1&from_search=true&qid=54ZAkrhH3r&rank=1" target="_blank"><br><br><br><h5 class="card-title"> <button type="button" class="btn btn-outline-info"> Book Link</button></h5></a>
+    </div>
+  </div>&nbsp; &nbsp; &nbsp; &nbsp;
+
+
+
+
+  <div class="card data">
+    <img src="SS4.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+   <a href="https://www.goodreads.com/book/show/576570.The_Princess_and_the_Pea?from_search=true&from_srp=true&qid=Z7aymJzvRL&rank=1" target="_blank"><br><br><br><h5 class="card-title"><button type="button" class="btn btn-outline-info"> Book Link</button></h5></a>
+ 
+    </div> 
+  </div> &nbsp; &nbsp; &nbsp; &nbsp;
+
+
+
+    <div class="card data">
+    <img src="SS5.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+   <a href="https://www.goodreads.com/book/show/21054378-cindrella?from_search=true&from_srp=true&qid=UgfsHzJwLQ&rank=3" target="_blank"><h5 class="card-title"> <button type="button" class="btn btn-outline-info">Book Link</button></h5></a>
+ 
+    </div> 
+  </div> &nbsp; &nbsp; &nbsp; &nbsp;
+
+
+
+
+
+</div><br><br><br>
+
 
 
 
